[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ie_utils"
author = "Johanna Andrango"
author-email = "johanna.andrango.b@student.ie.edu"
description-file = "README.md"
requires = [
    "pandas"
    # "flask", #Instead, use requirements.txt
]

[tool.flit.metadata.requires-extra]
dev = [
    "black"
]

[tool.flit.entrypoints."console_scripts"]
ie_tokenize = "ie_utils.__main__:main"